--- a/src/styles/sass/landing/_landing.scss
+++ b/src/styles/sass/landing/_landing.scss
@@ -11,7 +11,7 @@
 .landing {
   width: 100%;
   height: 100%;
-  background: url('../img/landing/landing-background.jpg') no-repeat left center;
+  background: url('../../img/landing/landing-background.jpg') no-repeat left center;
   background-size: cover;
   position: fixed;
   top: 0;
@@ -21,7 +21,7 @@
     width: 64%;
     height: 140%;
     border-radius: 50%;
-    background: url('../img/landing/dot-texture.png') repeat left top $white;
+    background: url('../../img/landing/dot-texture.png') repeat left top $white;
     position: absolute;
     top: -20%;
     right: -32%;
